Add submission detail

--- a/main/client/themes/bsu/submission_detail_content.html
+++ b/main/client/themes/bsu/submission_detail_content.html
@@ -20,270 +20,277 @@
 
         <div class="clearfix"></div>
         <div class="col-sm-6 pull-left">
-          <h2 align="left" class="anket_title">АЖИЛД ОРОХЫГ ХҮСЭГЧИЙН АНКЕТ</h2>
+          <h2 align="left" class="anket_title">Элсэн орох бүртгэлийн маягт</h2>
         </div>
         <div class="col-sm-6 pull-right">
-          <img class="pull-right bbtv_logo" src="http://bsu.mn/static/sites/bsu/default/images/logo.png">
+          <img class="pull-right bbtv_logo" src="http://britishschool.gerege.agency/static/sites/britishschool/default/images/logo.png">
         </div>
         <div class="clearfix"></div>
         <div id="personal" class="panel panel-default bsu-panel">
-          <div class="panel bsu-panel-header">
-            <p class="bsu-panel-title">1. Personal details</p>
-          </div>
+
           <div class="panel panel-body">
             <table class="table highlight bordered responsive-table bbtvtabledetail">
               <tbody>
                 <tr>
-                  <td>
-                    <span>What position are you applying for?</span>
-                    {{position}}
+                <tr>
+                  <td class="colInput">
+                    <span>This application is for admission Year Group:</span>
+                    {{yearGroup}}
                   </td>
-                  <td><span>Name:</span>{{ name }}</td>
-                  <td><span>Surname:</span>{{ surname }}</td>
-                </tr>
-                <tr>
-                  <td colspan="3">
-                    <span>Present address:</span>
-                    {{ address }}
+                  <td class="colInput">
+                    <span>Expected entry date:</span>
+                    {{ formatDate entryDate }}
                   </td>
-                </tr>
-                <tr>
-                  <td><span>Mobile:</span>{{ mobile }}</td>
-                  <td><span>Telephone number (work):</span>{{ telephoneWork }}</td>
-                  <td><span>Telephone number (home):</span>{{ telephoneHome }}</td>
-                </tr>
-                <tr>
-                  <td><span>E-mail address:</span>{{ email }}</td>
-                  <td><span>Date of birthday:</span>{{ birthday }}</td>
-                  <td><span>Registration number:</span>{{ registraionNumber }}</td>
-                </tr>
-                <tr>
-                  <td><span>Marital status:</span>{{ isMarried }}</td>
-                  <td colspan="2"><span>Children:</span>{{ children }}</td>
-                </tr>
-                <tr>
-                  <td>
-                    <span>Have you ever made an application to World Vision?</span>
-                    {{ isApplied }}
-                  </td>
-                  <td colspan="2">
-                    <span>If yes, give details:</span>
-                    {{ isAppliedDetails }}
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <span>Have you ever been employed by World Vision?</span>
-                    {{ isEmployed }}
-                  </td>
-                  <td colspan="2">
-                    <span>If yes, give details:</span>
-                    {{ isEmployedDetails }}
-                  </td>
-                </tr>
-                <tr>
-                  <td><span>How did you learn about the vacancy announcement?</span>{{ source }}</td>
-                  <td colspan="2"><span>The person who recommended you to apply to this job?</span>{{ recommendedPerson }}</td>
                 </tr>
               </tbody>
             </table>
           </div>
         </div>
+
+        <div id="personal" class="panel panel-default bsu-panel">
+          <div class="panel bsu-panel-header">
+            <p class="bsu-panel-title">Personal Information</p>
+          </div>
+          <div class="panel panel-body">
+
+            <table class="table highlight bordered responsive-table bbtvtabledetail">
+              <tbody>
+                <tr>
+                  <td rowspan="6" style="width: 160px;">
+                    <span>Portrait</span>
+                    <img style="width: 150px;" target="_blank" src="{{ portrait }}" class="img" />
+                  </td>
+                  <td>
+                    <span>First name:</span>
+                    {{ firstname }}</td>
+                  <td>
+                    <span>Last name:</span>
+                    {{ lastname }}
+                  </td>
+                </tr>
+                <tr>
+                  <td><span>Preferred name:</span>{{ preferredname }}</td>
+                  <td><span>Date of birth:</span>{{ formatDate birthday }}</td>
+
+                </tr>
+                <tr>
+                  <td><span>Nationality:</span>{{ nationality }}</td>
+                  <td><span>Passport №:</span>{{ passport }}</td>
+                </tr>
+                <tr>
+
+                  <td><span>Place of birth:</span>{{ placeOfBirth }}</td>
+                  <td><span>Telephone number:</span>{{ telephone }}</td>
+                </tr>
+
+                <tr>
+
+                  <td><span>Email address:</span>{{ email }}</td>
+                  <td><span>Gender:</span>{{ gender }}</td>
+                </tr>
+                <tr>
+                  <td> <span>Current year:</span>{{ currentYear }}</td>
+                  <td><span>Year applying for:</span>{{ applyingYear }}</td>
+                </tr>
+                <tr>
+                  <td> <span>Home address:</span>{{ address }}</td>
+                  <td><span>Applicant’s first language:</span>{{ applicantLanguage }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+
         <div id="educationForm" class="panel panel-default bsu-panel">
           <div class="panel bsu-panel-header">
-            <p class="bsu-panel-title">2. Education and Trainings</p>
+            <p class="bsu-panel-title">Educational Information</p>
           </div>
           <div class="panel panel-body">
             <table class="table highlight bordered responsive-table bbtvtabledetail1">
+              <tbody>
+                <tr class="center">
+                  <td>Current School:</td>
+                  <td>{{ currentSchool }}</a></td>
+                </tr>
+                <tr>
+                  <td>Date attended (from-to)</td>
+                  <td>{{ dateAttended }}</td>
+                </tr>
+                <tr>
+                  <td>Address:</td>
+                  <td>{{ schoolAddress }}</td>
+                </tr>
+              </tbody>
+            </table>
+
+            <table class="table highlight bordered responsive-table bbtvtabledetail1">
               <thead class="bold">
                 <tr>
-                  <th>Level of School</th>
-                  <th>Name of school</th>
-                  <th>City/Country</th>
-                  <th>Major</th>
-                  <th>Start date</th>
-                  <th>Finish date</th>
-                  <th>Degree or Certificate</th>
+                  <th>Previous School(s)</th>
+                  <th>Grade</th>
+                  <th>Dates attended (from-to)</th>
                 </tr>
               </thead>
               <tbody>
                 {{ #each educationForm }}
                 <tr>
-                  <td>{{ sLevel }}</td>
-                  <td>{{ sName }}</td>
-                  <td>{{ sCity }}</td>
-                  <td>{{ sMajor }}</td>
-                  <td>{{ formatDate sStartDate }}</td>
-                  <td>{{ formatDate sFinishDate }}</td>
-                  <td>{{ sDegree }}</td>
+                  <td>{{ sPrevious }}</td>
+                  <td>{{ sGrade }}</td>
+                  <td>{{ sDates }}</td>
                 </tr>
                 {{ /each }}
               </tbody>
             </table>
           </div>
         </div>
-        <div id="skillsForm" class="panel panel-default bsu-panel">
+        <div id="parentForm" class="panel panel-default bsu-panel">
           <div class="panel bsu-panel-header">
-            <p class="bsu-panel-title">3. Technical skills</p>
+            <p class="bsu-panel-title">Parent / Guardian Information</p>
           </div>
           <div class="panel panel-body">
             <table class="table highlight bordered responsive-table bbtvtabledetail1">
               <thead class="bold">
                 <tr>
-                  <th>Program</th>
-                  <th>Level</th>
+                  <th></th>
+                  <th>Father</th>
+                  <th>Mother</th>
                 </tr>
               </thead>
               <tbody>
-                {{ #each skillsForm }}
+                {{ #each parentForm }}
                 <tr>
-                  <td>{{ pProgram }}</td>
-                  <td>{{ pLevel }}</td>
+                  <td><span>Parent:</span>{{ parent }}</td>
+                  <td><span>First name:</span>{{ PFirstname }}</td>
+                  <td><span>Last name:</span>{{ PLastname }}</td>
                 </tr>
-                {{ /each }}
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div id="languageForm" class="panel panel-warning bsu-panel">
-          <div class="panel bsu-panel-header">
-            <p class="bsu-panel-title">4. Language ability</p>
-          </div>
-          <div class="panel panel-body">
-            <table class="table highlight bordered responsive-table bbtvtabledetail1">
-              <thead class="bold">
+
                 <tr>
-                  <th>Language</th>
-                  <th>Speaking</th>
-                  <th>Writing</th>
-                  <th>Listening</th>
+                  <td><span>Nationality:</span>{{ PNationality }}</td>
+                  <td collspan="2"><span>Home address:</span>{{ PAddress }}</td>
                 </tr>
-              </thead>
-              <tbody>
-                {{ #each languageForm }}
-                <tr class="center">
-                  <td>{{ lName }}</td>
-                  <td>{{ lSpeaking }}</td>
-                  <td>{{ lWriting }}</td>
-                  <td>{{ lListening }}</td>
-                </tr>
-                {{ /each }}
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div id="employmentForm" class="panel panel-primary bsu-panel">
-          <div class="panel bsu-panel-header">
-            <p class="bsu-panel-title">5. Employment history</p>
-          </div>
-          <div class="panel panel-body">
-            <table class="table highlight bordered responsive-table bbtvtabledetail">
-              <tbody>
-                {{ #each employmentForm }}
+
                 <tr>
-                  <td colspan="3">
-                    <span>Name and Address</span>
-                    {{eInformation}}
-                  </td>
+                  <td><span>Cellphone number:</span>{{ PCellphone }}</td>
+                  <td><span>Home phone number:</span>{{ PHomephone }}</td>
+                  <td><span>Email address:</span>{{ PEmail }}</td>
                 </tr>
+
                 <tr>
-                  <td><span>Last salary:</span>{{ eSalary }}</td>
-                  <td><span>Start date:</span>{{ formatDate eStartDate }}</td>
-                  <td><span>End date:</span>{{ formatDate eFinishDate }}</td>
-                </tr>
-                <tr>
-                  <td><span>Reason for leaving:</span>{{ eReason }}</td>
-                  <td><span>Position(s) Held (title):</span>{{ ePosition }}</td>
-                  <td><span>Describe your duties:</span>{{ eDuties }}</td>
-                </tr>
-                <tr>
-                  <td><span>Supervisor's Name/Title</span>{{ eSupervisorName }}</td>
-                  <td><span>Phone number</span>{{ eSupervisorPhone }}</td>
-                  <td><span>Can we contact her/him for a reference on offer of a position?</span>{{ eContactHim }}</td>
+                  <td><span>Occupation:</span>{{ POccupation }}</td>
+                  <td><span>Work place and work phone number:</span>{{ PWorkPhone }}</td>
+                  <td><span>First language:</span>{{ PFirstLanguage }}</td>
                 </tr>
                 <hr>
+
                 {{ /each }}
               </tbody>
             </table>
           </div>
         </div>
-        <div id="referencesForm" class="panel panel-warning bsu-panel">
+
+        <div id="languageForm" class="panel panel-warning bsu-panel">
           <div class="panel bsu-panel-header">
-            <p class="bsu-panel-title">6. References</p>
+            <p class="bsu-panel-title">If you are a foreign family:</p>
+          </div>
+          <div class="panel panel-body">
+            <table class="table highlight bordered responsive-table bbtvtabledetail1">
+
+              <tbody>
+
+                <tr class="center">
+                  <td><span>How long have you been in Mongolia:</span>{{ howLongMongolia }}</td>
+                  <td><span>How long do you plan to live in Ulaanbaatar:</span>{{ howLongUlaanbaatar }}</td>
+                </tr>
+
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div id="parent" class="panel panel-primary bsu-panel">
+
+          <div class="panel panel-body">
+            <table class="table highlight bordered responsive-table bbtvtabledetail">
+              <tbody>
+                <tr>
+                  <td><span>Parents’ Marital Status:</span>{{ PMStatus }}</td>
+                  <td><span>Student lives with:</span>{{ livesWith }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+
+        <div id="legalGuardion" class="panel panel-warning bsu-panel">
+          <div class="panel bsu-panel-header">
+            <p class="bsu-panel-title">Legal Guardian</p>
+          </div>
+          <div class="panel panel-body">
+            <table class="table highlight bordered responsive-table bbtvtabledetail1">
+
+              <tbody>
+                <tr>
+                  <td><span>Full name</span>{{ LGfullname }}</td>
+                  <td><span>Relation</span>{{ LGRelation }}</td>
+                  <td><span>Cellphone</span>{{ LGCellphone }}</td>
+                </tr>
+                <tr>
+                  <td colspan="2"><span>Home address</span>{{ LGAddress }}</td>
+                  <td><span>Email</span>{{ LGEmail }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div id="emergency" class="panel panel-warning bsu-panel">
+          <div class="panel bsu-panel-header">
+            <p class="bsu-panel-title">Emergency contact number</p>
+          </div>
+          <div class="panel panel-body">
+            <table class="table highlight bordered responsive-table bbtvtabledetail1">
+
+              <tbody>
+                <tr>
+                  <td><span>First name</span>{{ ECNFirstname }}</td>
+                  <td><span>Last name</span>{{ ECNLastname }}</td>
+                  <td><span>Cellphone</span>{{ ECNCellphone }}</td>
+                  <td><span>Relation</span>{{ ECNRelation }}</td>
+                  <td><span>Home phone</span>{{ ECNHomePhone }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+
+        <div id="siblingForm" class="panel panel-warning bsu-panel">
+          <div class="panel bsu-panel-header">
+            <p class="bsu-panel-title">Sibling Information </p>
           </div>
           <div class="panel panel-body">
             <table class="table highlight bordered responsive-table bbtvtabledetail1">
               <thead class="bold">
                 <tr>
-                  <th>Reference</th>
-                  <th>Name</th>
-                  <th>Organization</th>
-                  <th>Years known</th>
-                  <th>Home or Business address</th>
-                  <th>Home or Business phone</th>
+                  <th>First name</th>
+                  <th>Last name</th>
+                  <th>Date of birth</th>
+                  <th>Current school</th>
+                  <th>Dates attended</th>
                 </tr>
               </thead>
               <tbody>
-                {{ #each referencesForm }}
+                {{ #each nFamily }}
                 <tr class="center">
-                  <td>{{ reference }}</td>
-                  <td>{{ rName }}</td>
-                  <td>{{ rOrganization }}</td>
-                  <td>{{ rYears }}</td>
-                  <td>{{ rAddress }}</td>
-                  <td>{{ rPhone }}</td>
+                  <td>{{ FFirstname }}</td>
+                  <td>{{ FLastname }}</td>
+                  <td>{{ formatDate FBirthday }}</td>
+                  <td>{{ FCurrentSchool }}</td>
+                  <td>{{ FDatesAttended }}</td>
                 </tr>
                 {{ /each }}
-              </tbody>
-            </table>
-
-            <table class="table highlight bordered responsive-table bbtvtabledetail">
-              <tbody>
-                <tr>
-                  <td>
-                    <span>Are you presently attending a church?</span>
-                    {{ church }}
-                  </td>
-                  <td colspan="2">
-                    <span>If yes, what is the name, address and phone number of the church:</span>
-                    {{ churchInformation }}
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-
-          </div>
-        </div>
-
-        <div id="historyForm" class="panel panel-warning bsu-panel">
-          <div class="panel bsu-panel-header">
-            <p class="bsu-panel-title">7. Applicant history </p>
-          </div>
-          <div class="panel panel-body">
-            <table class="table highlight bordered responsive-table bbtvtabledetail">
-              <tbody>
-                <tr>
-                  <td>
-                    <span>Have you ever been convicted of a criminal offence?</span>
-                    {{ criminal }}
-                  </td>
-                  <td colspan="2">
-                    <span>If your answer is yes, please give details:</span>
-                    {{ criminalDetails }}
-                  </td>
-                </tr>
-                <tr>
-                  <td colspan="3">
-                    <span>Please summarize your understanding of child and adults’ abuse, exploitation and violence:</span>
-                    {{ summarize }}
-                  </td>
-                </tr>
-                <tr>
-                  <td colspan="3">
-                    <span>Do you know someone /family members, friends, relatives/ in World Vision:</span>
-                    {{ someoneInWV }}
-                  </td>
-                </tr>
               </tbody>
             </table>
 
