--- a/main/client/themes/bsu/submission_list_content.html
+++ b/main/client/themes/bsu/submission_list_content.html
@@ -20,7 +20,7 @@
           {{#each state$objects }}
             <tr>
               <td>{{ moFormat createdDate 'YYYY-MM-DD HH:MM' }}</td>
-              <td>{{ moFormat entryDate 'YYYY-MM-DD HH:MM' }}</td>
+              <td>{{ moFormat entryDate 'YYYY-MM-DD' }}</td>
               <td>{{ yearGroup}} </td>
               <td>{{ firstname}} </td>
               <td>
