--- a/main/client/themes/bsu/submission_detail_content.html
+++ b/main/client/themes/bsu/submission_detail_content.html
@@ -110,7 +110,7 @@
               <tbody>
                 <tr class="center">
                   <td>Current School:</td>
-                  <td>{{ currentSchool }}</a></td>
+                  <td>{{ currentSchool }}</td>
                 </tr>
                 <tr>
                   <td>Date attended (from-to)</td>
