--- a/main/client/themes/bsu/submission_detail_content.html
+++ b/main/client/themes/bsu/submission_detail_content.html
@@ -243,7 +243,7 @@
             <p class="bsu-panel-title">Emergency contact number</p>
           </div>
           <div class="panel panel-body">
-            <table class="table highlight bordered responsive-table bbtvtabledetail1">
+            <table class="table highlight bordered responsive-table bbtvtabledetail">
 
               <tbody>
                 <tr>
