Fixed student lisr

--- a/main/client/themes/student/submission_detail_content.html
+++ b/main/client/themes/student/submission_detail_content.html
@@ -1,4 +1,4 @@
-<template name="studentSDetCstudentStudent">
+<template name="studentSDetCapuStudent">
   {{# with state$object }}
     <div class="row">
       <!-- Fixed navbar -->
@@ -23,7 +23,7 @@
           <h2 align="left" class="anket_title">Дадлагын оюутны маягт</h2>
         </div>
         <div class="col-sm-6 pull-right">
-          <img class="pull-right bbtv_logo" src="http://www.student.mn/static/sites/student/default/images/logo_t.png">
+          <img class="pull-right bbtv_logo" src="http://www.apu.mn/static/sites/apu/default/images/logo_t.png">
         </div>
         <div class="clearfix"></div>
 
