--- a/main/client/themes/student/submission_list_content.html
+++ b/main/client/themes/student/submission_list_content.html
@@ -1,4 +1,4 @@
-<template name="apuSLCapuAnket">
+<template name="studentSLCapuStudent">
 
   <h3>{{ state$form.title }}</h3>
   <h4 class="title">Дадлагын оюутны хүсэлтүүд:</h4>
