--- a/main/client/themes/zag/submission_detail_content.html
+++ b/main/client/themes/zag/submission_detail_content.html
@@ -265,7 +265,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-lg-6">
+          <div class="col-sm-12 col-md-6 col-lg-6">
             <div id="equipment" class="panel panel-default zag-panel">
               <div class="panel zag-panel-header">
                 <p class="zag-panel-title">Компьютерийн мэдлэг</p>
@@ -291,7 +291,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-lg-6">
+          <div class="col-sm-12 col-md-6 col-lg-6">
             <div id="program" class="panel panel-default zag-panel">
               <div class="panel zag-panel-header">
                 <p class="zag-panel-title">Оффисын тоног төхөөрөмж эзэмшсэн байдал</p>
@@ -565,13 +565,13 @@
                 <tr>
                   <td>
                     <span>Диплом, мэргэжлийн үнэмлэхний хуулбар</span>
-                    <a href="{{ diploma }}" target="_blank">Харах</a>
+                    <a href="{{ diploma }}" target="_blank">Татах</a>
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <span>Цахим үнэмлэхний хуулбар</span>
-                    <a href="{{ passport }}" target="_blank">Харах</a>
+                    <a href="{{ passport }}" target="_blank">Татах</a>
                   </td>
                 </tr>
               </tbody>
