--- a/main/client/themes/bsu/submission_detail_content.html
+++ b/main/client/themes/bsu/submission_detail_content.html
@@ -7,6 +7,9 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-left">
               <li>
+                <button type="button" class="print" onClick="window.print()"><span class="glyphicon glyphicon-print"></span> Хэвлэх</button>
+              </li>
+              <li>
                 <a id="buttonBack" href="/forms/submission-list/{{ formId }}" class="pull-left btn btn-primary">
                   <span class="glyphicon glyphicon-arrow-left"></span>
                   Буцах
@@ -23,7 +26,7 @@
           <h2 align="left" class="anket_title">Элсэн орох бүртгэлийн маягт</h2>
         </div>
         <div class="col-sm-6 pull-right">
-          <img class="pull-right bbtv_logo" src="http://britishschool.gerege.agency/static/sites/britishschool/default/images/logo.png">
+          <img class="pull-right bbtv_logo" src="http://britishschool.edu.mn/static/sites/britishschool/default/images/logo.png">
         </div>
         <div class="clearfix"></div>
         <div id="personal" class="panel panel-default bsu-panel">
