--- a/main/client/themes/tumenshuvuut/layout.html
+++ b/main/client/themes/tumenshuvuut/layout.html
@@ -4,7 +4,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12">
+                    <span>Tsetsenbileg</span>
                     <a href="#" class="pull-right btn btn-primary btn-sm exit_btn" onclick="Meteor.logout()">Гарах</a>
+                    s
                     {{> render component=state$content}}
                 </div>
             </div>
