--- a/main/client/themes/tumenshuvuut/submission_list_content.html
+++ b/main/client/themes/tumenshuvuut/submission_list_content.html
@@ -1,5 +1,6 @@
 <template name="tumenshuvuutSLCanket">
-    <h3>{{ state$form.title }}</h3>
+    <!-- <h3>{{ state$form.title }}</h3> -->
+    <h3>Yueyeu</h3>
     <h4 class="title">Ирсэн анкетууд:</h4>
     <br>
     {{# if state$isReady }}
