--- a/main/client/themes/tumenshuvuut/submission_list_content.html
+++ b/main/client/themes/tumenshuvuut/submission_list_content.html
@@ -1,10 +1,10 @@
 <template name="tumenshuvuutSLCanket">
-    <!-- <h3>{{ state$form.title }}</h3> -->
+    <h3>{{ state$form.title }}</h3>
     <h3>Yueyeu</h3>
     <h4 class="title">Ирсэн анкетууд:</h4>
     <br>
     {{# if state$isReady }}
-    <div>
+    <div class="tsetsenbilegggg">
         <table class="table highlight bordered responsive-table senders_list">
             <thead>
                 <tr>
