--- a/main/client/themes/tumenshuvuut/submission_list_content.html
+++ b/main/client/themes/tumenshuvuut/submission_list_content.html
@@ -1,4 +1,4 @@
-<template name="tumenshuvuutSLCanket">
+<template name="tumenshuvuutSLCtumenshuvuutAnket">
     <h3>{{ state$form.title }}</h3>
     <h3>Yueyeu</h3>
     <h4 class="title">Ирсэн анкетууд:</h4>
