--- a/main/client/themes/tumenshuvuut/submission_delete_content.html
+++ b/main/client/themes/tumenshuvuut/submission_delete_content.html
@@ -1,4 +1,4 @@
-<template name="tumenshuvuutSDelCanket">
+<template name="tumenshuvuutSDelCtumenshuvuutAnket">
     <h3>{{ state$object.title }}</h3>
 
     <form id="submissionDeleteForm">
