--- a/main/client/themes/tumenshuvuut/submission_list_content.html
+++ b/main/client/themes/tumenshuvuut/submission_list_content.html
@@ -19,7 +19,7 @@
                 {{#each state$objects }}
                 <tr>
                     <td>{{ moFormat createdDate 'YYYY-MM-DD HH:MM' }}</td>
-                    <td>{{ positionTumenshuvuut.0.pos2 }}</td>
+                    <td>{{ pos2 }}</td>
                     <td>{{ lastname }} {{ firstname }}</td>
                     <td></td>
                     <td>
