--- a/main/client/themes/tumenshuvuut/submission_detail_content.html
+++ b/main/client/themes/tumenshuvuut/submission_detail_content.html
@@ -1,4 +1,5 @@
 <template name="tumenshuvuutSDetCmainTumenshuvuut">
+    {{# with state$object }}
     <div class="row">
         <nav class="navbar navbar-default navbar-fixed-top apu-navbar">
             <div class="container " style="margin-left: 5px;padding: 0;">
@@ -39,7 +40,7 @@
                                     <img style="width: 150px;" target="_blank" src="{{ portrait }}" class="img" />
                                 </td>
                                 <td>
-                                    <span>Ургийн овог</span>
+                                    <span>Ургийн овог:</span>
                                     {{ familyName }}
                                 </td>
                                 <td>
@@ -54,7 +55,7 @@
                             <tr>
                                 <td><span>Гар утас:</span>{{ phone }}</td>
                                 <td><span>Утас /гэрийн/:</span>{{ homePhone }}</td>
-                                <td><span>И-мэйл</span>{{ email}}</td>
+                                <td><span>И-мэйл:</span>{{ email }}</td>
                             </tr>
                             <tr>
                                 <td><span>Регистерийн дугаар:</span>{{ register }}</td>
@@ -64,12 +65,12 @@
                             </tr>
                             <tr>
                                 <td><span>Оршин суугаа хаяг: </span>{{ address }}</td>
-                                <td colspan="2"><span>Ам бүлийн тоо</span>{{ members }}</td>
+                                <td colspan="2"><span>Ам бүлийн тоо:</span>{{ members }}</td>
                             </tr>
                             <tr>
-                                <td><span>Яаралтай үед холбоо барих хүний нэр:</span>{{contactName}}</td>
-                                <td><span>Яаралтай үед холбоо барих хүний дугаар:</span>{{contactPhone}}</td>
-                                <td><span>Хэн болох:</span>{{contactMember}}</td>
+                                <td><span>Яаралтай үед холбоо барих хүний нэр:</span>{{ contactName }}</td>
+                                <td><span>Яаралтай үед холбоо барих хүний дугаар:</span>{{ contactPhone }}</td>
+                                <td><span>Хэн болох:</span>{{ contactMember }}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -77,4 +78,5 @@
             </div>
         </div>
     </div>
+    {{/ with}}
 </template>
