--- a/main/client/themes/tumenshuvuut/submission_detail_content.html
+++ b/main/client/themes/tumenshuvuut/submission_detail_content.html
@@ -79,7 +79,7 @@
 
             <div id="family" class="panel panel-default apu-panel">
                 <div class="panel apu-panel-header">
-                    <p class="apu-panel-title">Гэр бүлийн мэдээлэл</p>
+                    <p class="apu-panel-title">Гэр бүлийн тухай</p>
                 </div>
                 <div class="panel panel-body">
                     <table class="table highlight bordered responsive-table bbtvtabledetail">
